methods.basics.Methods.scala.error
Erreur de compilation :
Methods:8: error: Int does not take parameters
  for (compteur <- 1 to nbPas()){
                             ^